[gd_scene load_steps=4 format=3 uid="uid://besnquggdnplq"]

[ext_resource type="Script" uid="uid://ba34qqvverfbj" path="res://Scripts/UI/settings.gd" id="1_owiy1"]
[ext_resource type="Texture2D" uid="uid://q23pkly0v30j" path="res://Resources/UI/UX Bilder/muscheln.jpg" id="2_ma1v7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_owiy1"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owiy1")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ma1v7")
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacing" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 5

[node name="Spacing2" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Music" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Musik:"

[node name="Spacing3" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacing4" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacing5" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Effects" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Effekte:"

[node name="Spacing6" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EffectSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_owiy1")
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacing7" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacing8" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReturnButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Hauptmen√º"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/EffectSlider" to="." method="_on_effect_slider_value_changed"]
[connection signal="button_down" from="MarginContainer/ReturnButton" to="." method="_on_return_button_button_down"]
